<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"
            />
        <item android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications"
            android:title="@string/notifications"/>
        <item android:id="@+id/nav_soldcrops"
            android:icon="@drawable/ic_soldcrops"
            android:title="@string/sold_crops"/>
        <item android:id="@+id/nav_prediction"
            android:icon="@drawable/ic_prediction"
            android:title="@string/prediction"/>
    </group>


    <item android:title="@string/logout">
        <menu>
            <item android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/logout"
                android:id="@+id/nav_logout"/>
        </menu>

    </item>

</menu>